# Ndarray

./: .gitignore  CMakeLists.txt  README.md  coverage.xml
.github/workflows/: cmake-multi-platform.yml  valgrind-memory-leak-test.yml
include/: ndarray.h  ndarray.hpp  operations.hpp  shape.hpp  slice.hpp  slice_impl.hpp  tensor.hpp  tensor_base.hpp  tensor_impl.hpp  tensor_ref.hpp  tensorlibpp.hpp
include/tensor/: operations.hpp  shape.hpp  slice_impl.hpp  tensor.hpp  tensor_base.hpp  tensor_impl.hpp  tensor_ref.hpp
src/: main.cpp
test/: CMakeLists.txt  test_access_operation.cpp  test_ndarray.cpp  test_tensor_construction.cpp  test_tensor_opertions.cpp
